# slurm-emulator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml  pytest.xml
.github/workflows/: publish.yml  test.yml
deploy/firecrest-ui/: .env.example  .gitignore  README.md  docker-compose.yml
deploy/firecrest-ui/firecrest/: config.yaml
deploy/firecrest-ui/keycloak/: realm-kcrealm.json
docs/: firecrest-conformance.md  web-ui.md
emulator/: __init__.py
emulator/api/: __init__.py  emulator_server.py
emulator/api/slurmrestd/: __init__.py  app.py  auth.py  envelope.py  schemas.py  state.py
emulator/api/slurmrestd/routers/: __init__.py  slurmctld.py  slurmdb.py
emulator/api/ssh/: __init__.py  server.py
emulator/api/ui/: __init__.py  auth.py  routes.py
emulator/api/ui/static/: style.css
emulator/api/ui/templates/: _assoc_modal.html  _associations.html  _builder_rows.html  _config.html  _control.html  _jobs.html  _result.html  _scenario_builder.html  _scenario_steps.html  _status.html  base.html  index.html
emulator/cli/: __init__.py  cmd_cli.py  main.py
emulator/commands/: __init__.py  dispatcher.py  print_fields.py  sacct.py  sacctmgr.py  sshare.py
emulator/core/: __init__.py  database.py  scheduler.py  slurm_config.py  time_engine.py  usage_simulator.py
emulator/periodic_limits/: __init__.py  calculator.py  qos_manager.py
emulator/scenarios/: __init__.py  limits_configuration_scenarios.py  scenario_registry.py  sequence_scenario.py
examples/: custom_slurm.conf  slurm.conf
examples/firecrest/: README.md  conformance.md  ui-guide.md
examples/firecrest/e2e/: README.md  docker-compose.override.yml  f7t-api-config.emulator.yaml  run.sh
examples/firecrest/ui/: .gitignore  README.md  docker-compose.yml  up.sh
examples/firecrest/ui/firecrest/: config.yaml
examples/firecrest/ui/keycloak/: keycloak.env
scripts/: changelog.sh  docker-entrypoint.sh  firecrest_e2e.sh  generate_changelog_data.py  release.py
scripts/prompts/: changelog-prompt.md
tests/: __init__.py  conftest.py  test_account_parent.py  test_basic_functionality.py  test_cluster_support.py  test_dispatcher_routing.py  test_firecrest_contract.py  test_flag_validation.py  test_imports.py  test_multi_tres_parsing.py  test_partition_associations.py  test_print_fields.py  test_sacct.py  test_sacctmgr_formatting.py  test_slurmrestd_accounts.py  test_slurmrestd_auth.py  test_slurmrestd_ctld.py  test_slurmrestd_envelope.py  test_slurmrestd_jobs.py  test_ssh_portability.py  test_sshare.py  test_tres_formatting.py  test_ui.py
tests/firecrest/: test_real_client.py
